# ElasticSearch

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  requirements.txt
backend/: .dockerignore  Dockerfile  environment.yml  pyproject.toml
backend/app/: config.py  main.py
